Fix alignment of game mode selector

--- a/resources/assets/less/bem/game-mode.less
+++ b/resources/assets/less/bem/game-mode.less
@@ -19,6 +19,7 @@
 .game-mode {
   line-height: normal;
   width: 100%;
+  font-size: @font-size--title-small;
 
   @media @desktop {
     margin-left: auto;
